Fix issue where buttons in mobile browsers would sometimes overflow from the container they are in.

--- a/packages/formation/sass/modules/_m-button.scss
+++ b/packages/formation/sass/modules/_m-button.scss
@@ -10,6 +10,7 @@ button,
   -webkit-font-smoothing: inherit;
   -moz-osx-font-smoothing: inherit;
   background-color: $color-primary;
+  box-sizing: border-box;
 
   &.usa-button-secondary {
     background: transparent;
